test de la màj auto du site

--- a/_posts/2021-07-21-a-la-une.md
+++ b/_posts/2021-07-21-a-la-une.md
@@ -10,3 +10,5 @@ les "3 soirées pour..."
 lancées pour la première fois en septembre, leur premier module "3 soirées pour... réussir son année" est un extraordinairement riches de partages et de cheminement.
 
 Un grand merci à celles et ceux qui se sont risqués dans cette belle aventure.
+
+Ceci est un test
