fix liens internes

--- a/_posts/2021-11-19-exemples.md
+++ b/_posts/2021-11-19-exemples.md
@@ -26,26 +26,6 @@ Il suffit de les copier-coller dans le texte: 😁🏠📢
 
 Sous Gnome, tu as une appli qui doit s'appeler "Caractères" qui te permet de chercher et de copier n'importe quel caractère, y compris des émojis.
 
-## Lien vers un PDF
-
-Pour faire un lien, le code est le suivant :
-
-```
-    [texte du lien](/chemin/du/fichier)
-```
-
-avec donc:
-- le texte portant le lien entre crochets
-- suivi du chemin du fichier entre parenthèses.
-
-Exemple, si j'écris:
-```
-   Télécharger [ce fichier PDF](/documents/exemple.pdf)
-```
-ça donnera:
-
-   Télécharger [ce fichier PDF](/documents/exemple.pdf)
-
 ## Lien externe
 
 Comme on a vu plus haut, si tu mets une URL (quelque chose qui commence par `http://` ou `https://`), cela est automatiquement converti en lien.
@@ -56,6 +36,11 @@ Si par contre tu veux que le texte du lien soit différent, c'est exactement le 
     [texte du lien](URL)
 ```
 
+avec donc:
+- le texte portant le lien entre crochets
+- suivi de l'URL entre parenthèses.
+
+
 Exemple, si j'écris:
 ```
    Quelle homme, ce [PAC](https://perso.liris.cnrs.fr/pierre-antoine.champin/)
@@ -65,20 +50,45 @@ Exemple, si j'écris:
    Quelle homme, ce [PAC](https://perso.liris.cnrs.fr/pierre-antoine.champin/)
 
 
-## Image
+## Lien vers un PDF (ou autre lien interne)
 
-La syntaxe pour les images est très similaire à celle des liens, mais précédée d'un point d'exclamantion (qui évoque le "i" de image, à l'enverse).
+Pour faire un lien, le code est un peu plus compliqué,
+parce qu'il faut expliquer au générateur qu'il doit transformer un nom de fichier "local" en URL.
+Ça va donne un truc comme ça 
 
 ```
-  ![texte de remplacement](chemin ou URL de l'image)
+    [texte du lien]({{ "/chemin/du/fichier" | relative_url}})
+```
+
+On a donc entre les parenthèse :
+
+* deux accolades ouvrantes `{{`
+* le chemin du fichier dans l'arborescence de github, entre guillemets (`"`)
+* le texte `| relative_url`
+* puis on ferme la double accolade `}}`
+
+Exemple, si j'écris:
+```
+   Télécharger [ce fichier PDF]([{{ "/documents/exemple.pdf" | relative_url}})
+```
+ça donnera:
+
+   Télécharger [ce fichier PDF]([{{ "/documents/exemple.pdf" | relative_url}})
+
+## Image
+
+La syntaxe pour les images est très similaire à celle des liens internes, mais précédée d'un point d'exclamantion (qui évoque le "i" de image, à l'enverse).
+
+```
+  ![texte de remplacement]({{ "chemin de l'image" | relative_url}})
 ```
 
 Exemple, si j'écris
 ```
-   ![un joli phare](/img/phare.jpg)
+   ![un joli phare]({{ "/img/phare.jpg" | relative_url }})
 ```
 ça donnera
-   ![un joli phare](/img/phare.jpg)
+   ![un joli phare]({{ "/img/phare.jpg" | relative_url }})
 
 NB: le texte de remplacement s'affichera si l'image ne peut pas être affichée, pour raison ou une autre.
 
