fix lien interne encore

--- a/_posts/2021-11-19-exemples.md
+++ b/_posts/2021-11-19-exemples.md
@@ -69,11 +69,11 @@ On a donc entre les parenthèse :
 
 Exemple, si j'écris:
 ```
-   Télécharger [ce fichier PDF]([{{ "/documents/exemple.pdf" | relative_url}})
+   Télécharger [ce fichier PDF]({{ "/documents/exemple.pdf" | relative_url}})
 ```
 ça donnera:
 
-   Télécharger [ce fichier PDF]([{{ "/documents/exemple.pdf" | relative_url}})
+   Télécharger [ce fichier PDF]({{ "/documents/exemple.pdf" | relative_url}})
 
 ## Image
 
