échapé le markup Jekkyl dans les exemples

--- a/_posts/2021-11-19-exemples.md
+++ b/_posts/2021-11-19-exemples.md
@@ -57,19 +57,19 @@ parce qu'il faut expliquer au générateur qu'il doit transformer un nom de fich
 Ça va donne un truc comme ça 
 
 ```
-    [texte du lien]({{ "/chemin/du/fichier" | relative_url}})
+    [texte du lien](\{{ "/chemin/du/fichier" | relative_url}})
 ```
 
 On a donc entre les parenthèse :
 
-* deux accolades ouvrantes `{{`
+* deux accolades ouvrantes `\{{`
 * le chemin du fichier dans l'arborescence de github, entre guillemets (`"`)
 * le texte `| relative_url`
 * puis on ferme la double accolade `}}`
 
 Exemple, si j'écris:
 ```
-   Télécharger [ce fichier PDF]({{ "/documents/exemple.pdf" | relative_url}})
+   Télécharger [ce fichier PDF](\{{ "/documents/exemple.pdf" | relative_url}})
 ```
 ça donnera:
 
@@ -80,12 +80,12 @@ Exemple, si j'écris:
 La syntaxe pour les images est très similaire à celle des liens internes, mais précédée d'un point d'exclamantion (qui évoque le "i" de image, à l'enverse).
 
 ```
-  ![texte de remplacement]({{ "chemin de l'image" | relative_url}})
+  ![texte de remplacement](\{{ "chemin de l'image" | relative_url}})
 ```
 
 Exemple, si j'écris
 ```
-   ![un joli phare]({{ "/img/phare.jpg" | relative_url }})
+   ![un joli phare](\{{ "/img/phare.jpg" | relative_url }})
 ```
 ça donnera
    ![un joli phare]({{ "/img/phare.jpg" | relative_url }})
