échapé le markup Jekkyl correctement!

--- a/_posts/2021-11-19-exemples.md
+++ b/_posts/2021-11-19-exemples.md
@@ -56,21 +56,25 @@ Pour faire un lien, le code est un peu plus compliqué,
 parce qu'il faut expliquer au générateur qu'il doit transformer un nom de fichier "local" en URL.
 Ça va donne un truc comme ça 
 
+{% raw %}
 ```
-    [texte du lien](\{{ "/chemin/du/fichier" | relative_url}})
+   [texte du lien]({{ "/chemin/du/fichier" | relative_url}})
 ```
+{% endraw %}
 
 On a donc entre les parenthèse :
 
-* deux accolades ouvrantes `\{{`
+* deux accolades ouvrantes {% raw %}`{{`{% endraw %}
 * le chemin du fichier dans l'arborescence de github, entre guillemets (`"`)
 * le texte `| relative_url`
 * puis on ferme la double accolade `}}`
 
 Exemple, si j'écris:
+{% raw %}
 ```
-   Télécharger [ce fichier PDF](\{{ "/documents/exemple.pdf" | relative_url}})
+   Télécharger [ce fichier PDF]({{ "/documents/exemple.pdf" | relative_url}})
 ```
+{% endraw %}
 ça donnera:
 
    Télécharger [ce fichier PDF]({{ "/documents/exemple.pdf" | relative_url}})
@@ -79,14 +83,18 @@ Exemple, si j'écris:
 
 La syntaxe pour les images est très similaire à celle des liens internes, mais précédée d'un point d'exclamantion (qui évoque le "i" de image, à l'enverse).
 
+{% raw %}
 ```
-  ![texte de remplacement](\{{ "chemin de l'image" | relative_url}})
+  ![texte de remplacement]({{ "chemin de l'image" | relative_url}})
 ```
+{% endraw %}
 
 Exemple, si j'écris
+{% raw %}
 ```
-   ![un joli phare](\{{ "/img/phare.jpg" | relative_url }})
+   ![un joli phare]({{ "/img/phare.jpg" | relative_url }})
 ```
+{% endraw %}
 ça donnera
    ![un joli phare]({{ "/img/phare.jpg" | relative_url }})
 
