liste dans un bloc 'info'

--- a/_posts/2021-07-21-coaching1.md
+++ b/_posts/2021-07-21-coaching1.md
@@ -19,20 +19,16 @@ Pour accompagner l’évolution d’une personne, d’une équipe ou d’une org
 
 Ce travail ne peut exister qu'en étroite collaboration avec les instances dirigeantes tout en garantissant la confidentialité absolue pour l'équipe bénéficiant du coaching.
 
-
 À qui cela s’adresse-t-il ? 
-
 : À vous et votre équipe qui vivez une évolution (changement opérationnel ou organisationnel, fusion, crise…) ou souhaitez une évolution (performance, blocages...)
 
 Pour combien de personne ? 
-
 : 3 à … (j’ai eu l’occasion de travailler avec une structure réunissant plus de 50 personnes)
 
 Comment cela se présente ? 
-
-: Une séance de travail est programmée avec vous afin de qualifier l’objectif de l’action.
-  Une proposition sur mesure vous est faite (nombre et format des séances…).
-  Durée indicative d’une séance : 2 à 3 h.
-  L’action est organisée dans la majorité des cas en présentiel.
+: - Une séance de travail est programmée avec vous afin de qualifier l’objectif de l’action.
+  - Une proposition sur mesure vous est faite (nombre et format des séances…).
+  - Durée indicative d’une séance : 2 à 3 h.
+  - L’action est organisée dans la majorité des cas en présentiel.
 
 👣 [pour aller plus loin](https://acade-fr.github.io/bheema/contact/)
