--- a/_posts/2025-07-22-diastole.md
+++ b/_posts/2025-07-22-diastole.md
@@ -18,4 +18,4 @@ Pour combien de personne(s) ?
 Comment cela se présente-t-il ? 
 : [je te laisse découvrir]({{ "/documents/diastole 2025.mp4"  | relative_url}})
 
-👣 [pour aller plus loin](https://acade-fr.github.io/bheema/contact/)
+👣 [pour aller plus loin](https://[https://acade.fr/contact/])
